// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/layout/SideNavEntry renders correctly with link 1`] = `
<a
  href="/test"
  onClick={[Function]}
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    css={[Function]}
    disabled={false}
  >
    <div
      className="MuiListItemIcon-root"
      css={[Function]}
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="MuiListItemText-root"
      css={[Function]}
    >
      Test
    </div>
  </li>
</a>
`;

exports[`core/layout/SideNavEntry renders correctly without link 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters"
  css={[Function]}
  disabled={false}
>
  <div
    className="MuiListItemIcon-root"
    css={[Function]}
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    />
  </div>
  <div
    className="MuiListItemText-root"
    css={[Function]}
  >
    Test
  </div>
</li>
`;
